test/error/error-empty-mesh.sc
#include <iostream>

using namespace std;

int main(int argc, char** argv){
  
  uniform mesh MyMesh{
    
  };

  MyMesh m[512];

  return 0;
}

